--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                 <img  src="https://exam.ethernet.edu.et//images/profilepictures/EUEE00080316_1737468475.jpeg"
                     alt="Profile Picture" class="rounded-circle border border-3 border-primary mb-3 mx-auto d-flex" width="130" height="130">
                 <div class="p-4 col-lg-6 justify-content-center mx-auto d-block mt-4" >
-                    <p style="font-size: 14px;" class="text-bold"><span style="font-weight: bold;">User Name:</span> <span style="margin-left: 20px;"> EUEE00080316 </span> </p>
+                    <p style="font-size: 14px;" class="text-bold"><span style="font-weight: bold;">User Name:</span> <span style="margin-left: 20px;"> EUEE00080616 </span> </p>
                     <hr>
-                    <p style="font-size: 14px;" class="text-bold"><span style="font-weight: bold;">First Name:</span> <span style="margin-left: 20px;"> Abel </span> </p>
+                    <p style="font-size: 14px;" class="text-bold"><span style="font-weight: bold;">First Name:</span> <span style="margin-left: 20px;"> Biruk </span> </p>
                     <hr>
-                    <p style="font-size: 14px;" class="text-bold"><span style="font-weight: bold;">Father Name:</span> <span style="margin-left: 20px;"> Berhe </span> </p>
+                    <p style="font-size: 14px;" class="text-bold"><span style="font-weight: bold;">Father Name:</span> <span style="margin-left: 20px;"> Bogale </span> </p>
                     <hr>
-                    <p style="font-size: 14px;" class="text-bold"><span style="font-weight: bold;">G.Father Name:</span> <span style="margin-left: 20px;"> Berhane </span> </p>
+                    <p style="font-size: 14px;" class="text-bold"><span style="font-weight: bold;">G.Father Name:</span> <span style="margin-left: 20px;"> Mengistu </span> </p>
                     <hr>
                     <p style="font-size: 14px;" class="text-bold"><span style="font-weight: bold;">Exam Topic Name:</span> <span style="margin-left: 20px;"> Computer Science </span> </p>
                     <hr>
